fix: remove overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,7 @@
 body {
   @apply bg-dark-blue-200 font-mono;
   -webkit-text-size-adjust: 100%;
+  overflow: hidden;
 }
 
 input,
@@ -16,10 +17,7 @@ a {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-
 .background {
   display: flex;
   align-items: center;
 }
-
-
